--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,9 @@ jobs:
         run: |
           set -xe
           wget https://www.mercurial-scm.org/release/mercurial-3.2.4.tar.gz
-          tar zxvf mercurial-3.2.4.tar.gz
+          tar zvf mercurial-3.2.4.tar.gz
           cd mercurial-3.2.4
-          make install
+          sudo make install
 
       - name: install git-remote-hg
         run: |
