--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,12 @@ jobs:
       - name: install hg
         run: |
           set -xe
-          wget https://www.mercurial-scm.org/release/mercurial-3.2.4.tar.gz
-          tar zxf mercurial-3.2.4.tar.gz
-          cd mercurial-3.2.4
-          sudo pip install docutils
-          sudo make install
+          # wget https://www.mercurial-scm.org/release/mercurial-3.2.4.tar.gz
+          # tar zxf mercurial-3.2.4.tar.gz
+          # cd mercurial-3.2.4
+          # sudo pip install docutils
+          # sudo make install
+          sudo pip install mercurial==5.3.2
 
       - name: install git-remote-hg
         run: |
