--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: mirror
 on:
   workflow_dispatch:
   schedule:
-    - cron: "03 */8 */1 * *"
+    - cron: "03 0 */1 * *"
 
 
 jobs:
@@ -50,24 +50,25 @@ jobs:
           destination-git-repo-name: 'cffi'
           destination-git-personal-token: '${{ secrets.PERSONAL_GIT_TOKEN }}'
 
-  mirror-pypy:
-    runs-on: ubuntu-22.04
-    permissions:
-      contents: read
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup Python 2
-        uses: actions/setup-python@v4
-        with:
-          python-version: 2.7
-
-      - name: mirror https://foss.heptapod.net/pypy/pypy to https://github.com/mozillazg/pypy
-        uses: 'mozillazg/mirror-hg-repo@v1'
-        with:
-          source-hg-repo-url: 'https://foss.heptapod.net/pypy/pypy'
-          destination-git-repo-owner: 'mozillazg'
-          destination-git-repo-name: 'pypy'
-          destination-git-personal-token: '${{ secrets.PERSONAL_GIT_TOKEN }}'
-
+  # disable due to too slow
+  # mirror-pypy:
+  #   runs-on: ubuntu-22.04
+  #   permissions:
+  #     contents: read
+  #
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #
+  #     - name: Setup Python 2
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: 2.7
+  #
+  #     - name: mirror https://foss.heptapod.net/pypy/pypy to https://github.com/mozillazg/pypy
+  #       uses: 'mozillazg/mirror-hg-repo@v1'
+  #       with:
+  #         source-hg-repo-url: 'https://foss.heptapod.net/pypy/pypy'
+  #         destination-git-repo-owner: 'mozillazg'
+  #         destination-git-repo-name: 'pypy'
+  #         destination-git-personal-token: '${{ secrets.PERSONAL_GIT_TOKEN }}'
+  #
