--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
-      - name: Setup Python 2
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
-          python-version: 2.7
+          python-version: '3.10'
 
       - name: mirror https://foss.heptapod.net/pypy/buildbot to https://github.com/mozillazg/pypy-buildbot
-        uses: 'mozillazg/mirror-hg-repo@v1'
+        uses: 'mozillazg/mirror-hg-repo@python3'
         with:
           source-hg-repo-url: 'https://foss.heptapod.net/pypy/buildbot'
           destination-git-repo-owner: 'mozillazg'
@@ -36,14 +34,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
-      - name: Setup Python 2
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
-          python-version: 2.7
+          python-version: '3.10'
 
       - name: mirror https://foss.heptapod.net/pypy/cffi to https://github.com/mozillazg/cffi
-        uses: 'mozillazg/mirror-hg-repo@v1'
+        uses: 'mozillazg/mirror-hg-repo@python3'
         with:
           source-hg-repo-url: 'https://foss.heptapod.net/pypy/cffi'
           destination-git-repo-owner: 'mozillazg'
